[package]
name = "ninetails"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
crossterm = { version = "0.26.0", features = ["event-stream"] }
futures = "0.3.26"
futures-timer = "3.0.2"
notify = "5.1.0"
rev_buf_reader = "0.3.0"
tokio = { version = "1.25.0", features = ["full", "sync"] }
tui = "0.19.0"
